tests/snapshots/yaml_suite_snapshots__yaml_suite_M9B4_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 8.7. Literal Scalar
  from: "http://www.yaml.org/spec/1.2/spec.html#id2795789"
  tags: spec literal scalar whitespace 1.3-err
  yaml: "|\n literal\n ——»text\n↵\n↵\n"
  tree: "+STR\n +DOC\n  =VAL |literal\\n\\ttext\\n\n -DOC\n-STR\n"
  json: "\"literal\\n\\ttext\\n\"\n"
  dump: "|\n  literal\n  —»text\n"
