tests/snapshots/yaml_suite_snapshots__yaml_suite_M9B4_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "|\n  literal\n  —»text\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2795789"
  json: "\"literal\\n\\ttext\\n\"\n"
  name: Spec Example 8.7. Literal Scalar
  tags: spec literal scalar whitespace 1.3-err
  tree: "+STR\n +DOC\n  =VAL |literal\\n\\ttext\\n\n -DOC\n-STR\n"
  yaml: "|\n literal\n ——»text\n↵\n↵\n"
