tests/snapshots/yaml_suite_snapshots__yaml_suite_MJS9_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Spec Example 6.7. Block Folding
  from: "http://www.yaml.org/spec/1.2/spec.html#id2779603"
  tags: folded spec scalar whitespace 1.3-err
  yaml: ">\n  foo␣\n␣\n  —» bar\n\n  baz\n"
  tree: "+STR\n +DOC\n  =VAL >foo \\n\\n\\t bar\\n\\nbaz\\n\n -DOC\n-STR\n"
  json: "\"foo \\n\\n\\t bar\\n\\nbaz\\n\"\n"
  dump: "\"foo \\n\\n\\t bar\\n\\nbaz\\n\"\n"
