tests/snapshots/yaml_suite_snapshots__yaml_suite_MJS9_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "\"foo \\n\\n\\t bar\\n\\nbaz\\n\"\n"
  from: "http://www.yaml.org/spec/1.2/spec.html#id2779603"
  json: "\"foo \\n\\n\\t bar\\n\\nbaz\\n\"\n"
  name: Spec Example 6.7. Block Folding
  tags: folded spec scalar whitespace 1.3-err
  tree: "+STR\n +DOC\n  =VAL >foo \\n\\n\\t bar\\n\\nbaz\\n\n -DOC\n-STR\n"
  yaml: ">\n  foo␣\n␣\n  —» bar\n\n  baz\n"
