tests/snapshots/yaml_suite_snapshots__yaml_suite_MUS6_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Directive variants
  from: "@ingydotnet"
  tags: directive
  also: ZYU8
  fail: true
  yaml: "%YAML 1.1#...\n---\n"
  tree: "+STR\n"
- fail: true
  yaml: "%YAML 1.2\n---\n%YAML 1.2\n---\n"
  dump: null
- yaml: "%YAML  1.1\n---\n"
  tree: "+STR\n +DOC ---\n  =VAL :\n -DOC\n-STR\n"
  json: "null\n"
  dump: "---\n"
- yaml: "%YAML ——» 1.1\n---\n"
- yaml: "%YAML 1.1  # comment\n---\n"
- note: These 2 are reserved directives
  yaml: "%YAM 1.1\n---\n"
- yaml: "%YAMLL 1.1\n---\n"
