tests/snapshots/yaml_suite_snapshots__yaml_suite_MXS3_med.snap
---
source: tests/yaml_suite_snapshots.rs
expression: med
---
- name: Flow Mapping in Block Sequence
  from: NimYAML tests
  tags: mapping sequence flow
  yaml: "- {a: b}\n"
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP {}\n    =VAL :a\n    =VAL :b\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  json: "[\n  {\n    \"a\": \"b\"\n  }\n]\n"
  dump: "- a: b\n"
