tests/snapshots/yaml_suite_snapshots__yaml_suite_MXS3_tight.snap
---
source: tests/yaml_suite_snapshots.rs
expression: tight
---
- dump: "- a: b\n"
  from: NimYAML tests
  json: "[\n  {\n    \"a\": \"b\"\n  }\n]\n"
  name: Flow Mapping in Block Sequence
  tags: mapping sequence flow
  tree: "+STR\n +DOC\n  +SEQ\n   +MAP {}\n    =VAL :a\n    =VAL :b\n   -MAP\n  -SEQ\n -DOC\n-STR\n"
  yaml: "- {a: b}\n"
